# SeriousSaveEditor

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml  release.yml
patterns/: CTSEMETA.hexpat  PlayerProfile.hexpat  PlayerProfileData.hexpat  SignatureStream.hexpat
src/: ctsemeta.rs  helpers.rs  main.rs  signature_stream.rs
